syntax = "proto3";

package order;

option go_package = "ifpb.com/microservices-proto/golang/order";

import "payment.proto";
import "shipping.proto";

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string item_id = 1;
  int32 quantity = 2;
  string name = 3;
  double price = 4;
}

message CreateOrderResponse {
  string order_id = 1;
  double total_amount = 2;
  string payment_status = 3;
  int32 delivery_days = 4;
  string status = 5;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}